    {+} SynFPCx64MM memory manager with better multithreading scaling for x86_64
        (http://blog.synopse.info/post/2020/05/07/New-Multi-thread-Friendly-Memory-Manager-for-FPC-written-in-x86_64-assembly)
    {+} Default C memory manager for other 32-bit unix targets (https://www.freepascal.org/docs-html/current/rtl/cmem/index.html)
    {#} Relogin of slots didn't brought up all slots as intended
    {#} announce_event for precatcher from spam config never worked
    {^} Enumerations for some TV function for better clarification
    {^} Idling keeps all slots in a ready state now

--=============================( SLFTP v1.5.6 )===================================-
 ** NOTE: FROM NOW ON YOU HAVE TO USE - Delphi 10.3 Rio or newer - ON WINDOWS! **
 ** NOTE: FROM NOW ON YOU HAVE TO USE UNRELEASED - FPC 3.2 or newer - ON LINUX! **
  
    {+} Blowfish CBC support (#124)
    {+} Box Office Mojo support
    {+} New HTTP Library (up to 50% faster) with Socks5 support and SSL version negotiation
    {+} News System to store important messages to encrypted file. (#173, #164, #198)
    {+} New race stats database based on mORMot object-relational mapping
    {+} Wildcard/Regex (Masks) support for kb_sectionhandlers (TTVRelease, TIMDBRelease, etc) (#147)
    {+} Wildcard/Regex (Masks) support for midnight sections
    {+} New !affils command.
    {+} Show a message when 0 byte file was detected on startup (#189)
    {+} !status and !uptime shows if you use 32/64-bit version of slftp and used compiler version
    {+} !lastlog command to show last log entries. (#160)
    {+} Avoid double race of release in different sections (#116)
    {+} Show a warn message if important files not found on startup
    {+} Show PID & actual memory usage in !status command (#170)
    {+} !fetchuser cmd to fetch some information about site settings + basic recommendation (#51)
    {+} Support for wildcards in !batch (#222)
    {+} Completely new SQLite engine