@@ -55,10 +55,11 @@
     {+} SynFPCx64MM memory manager with better multithreading scaling for x86_64
         (http://blog.synopse.info/post/2020/05/07/New-Multi-thread-Friendly-Memory-Manager-for-FPC-written-in-x86_64-assembly)
     {+} Default C memory manager for other 32-bit unix targets (https://www.freepascal.org/docs-html/current/rtl/cmem/index.html)
-    {#} Relogin of slots didn't brought up all slots as intended
+    {#} Relogin of slots didn't bring up all slots as intended
     {#} announce_event for precatcher from spam config never worked
     {^} Enumerations for some TV function for better clarification
     {^} Idling keeps all slots in a ready state now
+    {^} Added a new option (2) for the setting skip_being_uploaded_files to allow downloading 0byte files
 
 --=============================( SLFTP v1.5.6 )===================================-
  ** NOTE: FROM NOW ON YOU HAVE TO USE - Delphi 10.3 Rio or newer - ON WINDOWS! **
